@@ -239,6 +239,8 @@ lighter making things easier to read.
   MediaWiki:showingresultsnum
 * (bug 9122) Fix minor display issue in RTL with section edit link margin
 * (bug 5805) Enable PLURAL option for some messages of watchlist and statistic
+* (bug 3953) Work around poor display of parenthesis in the in other
+  languages section of MonoBook skin
 
 == Languages updated ==
 
